# 3rd_Year_Stuff

./: 3rd Year Tips.docx  README.md  frequencyHelper  frequencyHelper.c  plagiarism dec
3rd Year Exam Solutions/: links.docx
CS3011 Symbolic Programming/: Notes.docx
CS3014 Concurrent Systems/: All Notes.docx
CS3014 Concurrent Systems/assignments/FinalExam/csu33014-annual-partB(1)/csu33014-annual-partB/: CMakeLists.txt  csu33014-annual-partB-code.c
CS3021 Computer Architecture/: Notes - 02 IA32 _ x64.docx  Notes - 03 RISC-I _ Pipelines.docx  Notes - 04 Memory Management Units.docx  Notes - 05 Caches.docx  Notes - 06 Multiprocessors _ Cache Coherency.docx
CS3041 Information Management/: File Systems vs. Databases.docx  Notes - 01 Introduction to Databases.docx  Notes - 02 DBMS Architecture.docx  Notes - 03 Database Models.docx  Notes - 04 Relational Algebra.docx  Notes - 10 Database Security.docx  Notes - 11 Transactions _ Concurrency Control.docx  Notes - 12 NoSQL.docx
CS3061 Artificial Intelligence/: AI_exam.aux  AI_exam.tex  Compact Crash Course.docx  assignment2.py
CS3071 Compiler Design/: (Don_t use for revision) All Lectures.docx  Compiler Design YouTube Series Notes.docx  E+T into E-LIST.docx  Grammars.docx  Machines - FSMs and PMs.docx  Need to Learn Definitions.docx  Top-Down Processing of L-Attributed Grammars.docx
CompArchCacher/: cacher.py
Compilers/: Assignment#2  calcwithvariables.l  calcwithvariables.y  roman.l  roman.y
Haskell Practise/: Starter.hs  practisept2.hs
Java_stuff/: company.java  compnayMaker
Prolog/: add.pl  descends.pl  (+7 more)
(+320 files in other folders)
